--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ h1 { font-size:32px; color:#ff00aa; margin-bottom:10px; text-shadow:0 0 10px #ff
 .shop-button { font-size:16px; margin:8px; padding:10px 20px; background:#222; color:#fff; border:2px solid #00ffd5; border-radius:10px; cursor:pointer; transition:all .2s ease; }
 .shop-button:hover { background:#333; transform:scale(1.05); }
 #message { margin-top:20px; font-size:18px; color:#ffcc00; min-height:24px; white-space:pre-line; }
+#skins { display:flex; flex-wrap:wrap; justify-content:center; }
 .skin-button { display:inline-block; margin:10px; border:2px solid #00ffd5; border-radius:12px; cursor:pointer; padding:8px; background:#111; transition:all .3s ease; max-width:160px; text-align:center; }
 .skin-button:hover { background:#222; transform:scale(1.05); }
 .skin-img { max-width:100%; border-radius:10px; display:block; margin:0 auto 6px; box-shadow:0 0 10px #00ffd5; }
@@ -24,6 +25,7 @@ h1 { font-size:32px; color:#ff00aa; margin-bottom:10px; text-shadow:0 0 10px #ff
 .selected-badge { display:inline-block; margin-top:6px; padding:4px 8px; background:#00ffd5; color:#000; border-radius:8px; font-weight:bold; font-size:12px; }
 #console { position:fixed; bottom:0; left:0; width:100%; background:rgba(0,0,0,0.95); border-top:2px solid #00ffd5; padding:10px; display:none; z-index:10000; }
 #consoleInput { width:95%; padding:10px; background:#111; border:2px solid #00ffd5; border-radius:8px; color:#00ffd5; font-size:16px; outline:none; }
+#topStatsContainer { margin-top:40px; text-align:left; max-width:400px; margin-left:auto; margin-right:auto; }
 .hint { font-size:12px; color:#999; margin-top:6px; text-align:left; max-width:900px; margin-left:auto; margin-right:auto; }
 </style>
 </head>
@@ -51,6 +53,8 @@ h1 { font-size:32px; color:#ff00aa; margin-bottom:10px; text-shadow:0 0 10px #ff
 
 <div id="message"></div>
 
+<div id="topStatsContainer"></div>
+
 <div id="console">
 <input type="text" id="consoleInput" placeholder="Команды: /pay id сумма, /click id сила, /changeID old new, /balance id, /close">
 <div class="hint">Примеры: <b>/pay 123456 500</b>, <b>/click 123456 60</b>, <b>/changeID 111111 222222</b></div>
@@ -60,25 +64,41 @@ h1 { font-size:32px; color:#ff00aa; margin-bottom:10px; text-shadow:0 0 10px #ff
 <script async src="https://telegram.org/js/telegram-widget.js?7"
     data-telegram-login="@Ruinacoin_bot"
     data-size="large"
-    data-userpic="false"
     data-request-access="write"
     data-on-auth="onTelegramAuth(user)">
 </script>
 
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-database-compat.js"></script>
+
 <script>
+// ====== FIREBASE ======
+const firebaseConfig = {
+    apiKey: "ВАШ_API_KEY",
+    authDomain: "ВАШ_ДОМЕН.firebaseapp.com",
+    databaseURL: "https://ВАШ_ДОМЕН.firebaseio.com",
+    projectId: "ВАШ_ДОМЕН",
+    storageBucket: "ВАШ_ДОМЕН.appspot.com",
+    messagingSenderId: "ВАШ_ID",
+    appId: "ВАШ_APPID"
+};
+firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
+
 // ====== ДАННЫЕ ======
-let ruina = 0, baseClick = 1, baseAuto = 0, upgradeCost = 50, autoClickCost = 20000;
-let selectedSkin = null, autoInterval = null, playerID = null, purchasedSkins = [];
+let ruina=0, baseClick=1, baseAuto=0, upgradeCost=50, autoClickCost=20000;
+let selectedSkin=null, autoInterval=null, playerID=null, purchasedSkins=[];
 
 // ====== СКИНЫ ======
 const skins = [
-{id: 1, name: "Default", img: "https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png", cost: 0},
-{id: 2, name: "Skin 1", cost: 10000, img: "https://i.postimg.cc/d7hZXDtL/photo-1-2025-09-16-13-48-10.jpg", bonus: {clickMult:1.1, autoMult:1}},
-{id: 3, name: "Skin 2", cost: 25000, img: "https://i.postimg.cc/4HgKm5v9/photo-2-2025-09-16-13-48-10.jpg", bonus: {clickMult:1.25, autoMult:1}},
-{id: 4, name: "Skin 3", cost: 50000, img: "https://i.postimg.cc/0MmMk3Sv/photo-3-2025-09-16-13-48-10.jpg", bonus: {clickMult:1.5, autoMult:1}},
-{id: 5, name: "Skin 4", cost: 120000, img: "https://i.postimg.cc/RJLWfHGb/photo-4-2025-09-16-13-48-10.jpg", bonus: {clickMult:1, autoMult:2}},
-{id: 6, name: "Skin 5", cost: 350000, img: "https://i.postimg.cc/7CjJyDfX/photo-5-2025-09-16-13-48-10.jpg", bonus: {clickMult:1, autoMult:3}},
-{id: 7, name: "Skin 6", cost: 700000, img: "https://i.postimg.cc/0rYMhTxd/photo-6-2025-09-16-13-48-10.jpg", bonus: {clickMult:3, autoMult:3}}
+{id:1,name:"Default",img:"https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png",cost:0},
+{id:2,name:"Skin 1",cost:10000,img:"https://i.postimg.cc/d7hZXDtL/photo-1-2025-09-16-13-48-10.jpg",bonus:{clickMult:1.1,autoMult:1}},
+{id:3,name:"Skin 2",cost:25000,img:"https://i.postimg.cc/4HgKm5v9/photo-2-2025-09-16-13-48-10.jpg",bonus:{clickMult:1.25,autoMult:1}},
+{id:4,name:"Skin 3",cost:50000,img:"https://i.postimg.cc/0MmMk3Sv/photo-3-2025-09-16-13-48-10.jpg",bonus:{clickMult:1.5,autoMult:1}},
+{id:5,name:"Skin 4",cost:120000,img:"https://i.postimg.cc/RJLWfHGb/photo-4-2025-09-16-13-48-10.jpg",bonus:{clickMult:1,autoMult:2}},
+{id:6,name:"Skin 5",cost:350000,img:"https://i.postimg.cc/7CjJyDfX/photo-5-2025-09-16-13-48-10.jpg",bonus:{clickMult:1,autoMult:3}},
+{id:7,name:"Skin 6",cost:700000,img:"https://i.postimg.cc/0rYMhTxd/photo-6-2025-09-16-13-48-10.jpg",bonus:{clickMult:3,autoMult:3}}
 ];
 
 // ====== PLAYER ======
@@ -90,13 +110,11 @@ function loadOrCreatePlayerID(){
 }
 function getBalance(id){ return Number(localStorage.getItem("ruina_"+id)||"0"); }
 function setBalance(id,val){ localStorage.setItem("ruina_"+id, Math.max(0,val)); }
-function loadData(id){ const d=localStorage.getItem("ruinaData_"+id); return d?JSON.parse(d):{}; }
-function saveData(id,data){ localStorage.setItem("ruinaData_"+id, JSON.stringify(data)); }
 
 function loadPlayer(){
     if(!playerID) playerID=loadOrCreatePlayerID();
     document.getElementById("playerId").innerText = "ID: "+playerID;
-    const saved=loadData(playerID);
+    const saved=JSON.parse(localStorage.getItem("ruinaData_"+playerID)||"{}");
     baseClick = saved.baseClick ?? 1;
     baseAuto = saved.baseAuto ?? 0;
     upgradeCost = saved.upgradeCost ?? 50;
@@ -107,9 +125,12 @@ function loadPlayer(){
     updateUI(); updateSkins();
     if(baseAuto>0) startAutoClick();
 }
+
 function savePlayer(){
     setBalance(playerID, ruina);
-    saveData(playerID, {baseClick, baseAuto, upgradeCost, autoClickCost, selectedSkin, purchasedSkins});
+    localStorage.setItem("ruinaData_"+playerID, JSON.stringify({baseClick,baseAuto,upgradeCost,autoClickCost,selectedSkin,purchasedSkins}));
+    // Сохраняем глобально в Firebase
+    db.ref("players/"+playerID).set({ruina,baseClick,baseAuto,selectedSkin});
 }
 
 // ====== GAME ======
@@ -122,9 +143,9 @@ function updateUI(){
 }
 
 function tap(){
-    let clickMult = 1;
+    let clickMult=1;
     const skin = skins.find(s=>s.id===selectedSkin);
-    if(skin?.bonus?.clickMult) clickMult = skin.bonus.clickMult;
+    if(skin?.bonus?.clickMult) clickMult=skin.bonus.clickMult;
     ruina += baseClick*clickMult;
     updateUI();
     savePlayer();
@@ -143,12 +164,11 @@ document.getElementById("buyAutoClickBtn").addEventListener("click",()=>{
 function startAutoClick(){
     if(autoInterval) clearInterval(autoInterval);
     autoInterval=setInterval(()=>{
-        let autoMult = 1;
-        const skin = skins.find(s=>s.id===selectedSkin);
-        if(skin?.bonus?.autoMult) autoMult = skin.bonus.autoMult;
-        ruina += baseAuto*autoMult;
-        updateUI();
-        savePlayer();
+        let autoMult=1;
+        const skin=skins.find(s=>s.id===selectedSkin);
+        if(skin?.bonus?.autoMult) autoMult=skin.bonus.autoMult;
+        ruina+=baseAuto*autoMult;
+        updateUI(); savePlayer();
     },1000);
 }
 
@@ -158,18 +178,17 @@ function updateSkins(){
     skins.forEach(s=>{
         const btn=document.createElement("div");
         btn.className="skin-button";
-        const owned = purchasedSkins.includes(s.id);
-        const price = owned ? 0 : s.cost||0;
+        const owned=purchasedSkins.includes(s.id);
+        const price=owned?s.cost=0:s.cost||0;
         btn.innerHTML=`
         <img src="${s.img}" class="skin-img" style="${selectedSkin===s.id?'border:2px solid #ff00aa;box-shadow:0 0 20px #ff00aa;':''}">
-        <div class="skin-info">${s.name}<br>${price} RUINA</div>
+        <div class="skin-info">${s.name}<br>${owned?0:s.cost||0} RUINA</div>
         ${s.bonus?`<div style="font-size:12px;color:#ff00aa;">Click x${s.bonus.clickMult}, Auto x${s.bonus.autoMult}</div>`:''}
         ${selectedSkin===s.id?'<div class="selected-badge">SELECTED</div>':''}`;
         btn.onclick=()=>{
             if(selectedSkin===s.id){ showMsg("Already selected!"); }
-            else if(price===0||ruina>=price){
-                if(price>0) ruina-=price;
-                if(!owned) purchasedSkins.push(s.id);
+            else if(owned||ruina>=s.cost){
+                if(!owned) { ruina-=s.cost; purchasedSkins.push(s.id); }
                 selectedSkin=s.id;
                 document.getElementById("tapButton").src=s.img;
                 updateUI(); updateSkins(); savePlayer();
@@ -180,43 +199,23 @@ function updateSkins(){
     });
 }
 
-// ====== CONSOLE ======
-const playerIdEl=document.getElementById("playerId"); 
-let clickTimeout=null, clickCount=0;
-playerIdEl.addEventListener("click", ()=>{
-    clickCount++;
-    if(!clickTimeout){
-        clickTimeout=setTimeout(()=>{
-            if(clickCount===2) document.getElementById("console").style.display = document.getElementById("console").style.display==="block"?"none":"block";
-            clickCount=0; clickTimeout=null;
-        },300);
-    }
-});
-document.getElementById("consoleInput").addEventListener("keydown", e=>{
-    if(e.key==="Enter"){ const cmd=e.target.value.trim(); if(cmd) handleConsoleCommand(cmd); e.target.value=""; }
-});
-function handleConsoleCommand(cmd){
-    const p=cmd.split(" "), c=p[0];
-    if(c==="/pay"&&p.length===3){ const id=p[1], sum=parseInt(p[2]); if(!isNaN(sum)){ setBalance(id,getBalance(id)+sum); if(id===playerID) ruina+=sum; showMsg(`Выдано ${sum} RUINA игроку ID ${id}`); updateUI(); } }
-    else if(c==="/click"&&p.length===3){ const id=p[1], power=parseInt(p[2]); if(!isNaN(power)){ const data=loadData(id)||{}; data.baseClick=power; saveData(id,data); if(id===playerID){ baseClick=power; updateUI(); } showMsg(`ClickPower ID ${id} = ${power}`); } }
-    else if(c==="/changeID"&&p.length===3){ const oldID=p[1], newID=p[2]; const data=loadData(oldID); const balance=getBalance(oldID); if(data!==null){ saveData(newID,data); setBalance(newID,balance); localStorage.removeItem("ruinaData_"+oldID); localStorage.removeItem("ruina_"+oldID); showMsg(`ID ${oldID} заменён на ${newID}`); if(playerID===oldID){ playerID=newID; localStorage.setItem("playerID",newID); document.getElementById("playerId").innerText="ID: "+playerID; } } }
-    else if(c==="/balance"&&p.length===2){ const id=p[1]; showMsg(`Баланс ID ${id}: ${getBalance(id)} RUINA`); }
-    else if(c==="/close"){ document.getElementById("console").style.display="none"; }
-    else showMsg("Неизвестная команда");
-}
-
 // ====== MESSAGES ======
 let msgTimeout=null;
 function showMsg(text,t=3000){ const m=document.getElementById("message"); m.innerText=text; if(msgTimeout) clearTimeout(msgTimeout); msgTimeout=setTimeout(()=>m.innerText="",t); }
 
 // ====== TOP STATS ======
 document.getElementById("topStatsBtn").addEventListener("click",()=>{
-    let allPlayers=[];
-    for(let key in localStorage){ if(key.startsWith("ruina_")){ allPlayers.push({id:key.replace("ruina_",""), ruina:Number(localStorage.getItem(key))}); } }
-    allPlayers.sort((a,b)=>b.ruina-a.ruina);
-    let msg="Топ RUINA:\n";
-    allPlayers.slice(0,10).forEach((p,i)=>{ msg+=`${i+1}. ID ${p.id}: ${p.ruina}\n`; });
-    showMsg(msg,8000);
+    db.ref("players").once("value").then(snapshot=>{
+        const data=snapshot.val();
+        if(!data){ showMsg("Нет данных для топа."); return; }
+        const players=Object.entries(data).map(([id,p])=>({id,ruina:p.ruina}));
+        players.sort((a,b)=>b.ruina-a.ruina);
+        const container=document.getElementById("topStatsContainer");
+        container.innerHTML="<h2>Топ RUINA:</h2>";
+        players.slice(0,10).forEach((p,i)=>{ container.innerHTML+=`${i+1}. ID ${p.id}: ${p.ruina}<br>`; });
+        // Прокрутка к топу
+        container.scrollIntoView({behavior:"smooth"});
+    });
 });
 
 // ====== TELEGRAM LOGIN ======
